🐛修复(request): 修复 interceptores 类型

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>alan Vue Webpack App</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-    />
-    <meta charset="utf-8" />
-  </head>
 
-  <body>
-    <div id="app" />
-  </body>
+<head>
+  <title>alan Vue Webpack App</title>
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+  <meta charset="utf-8" />
+</head>
+
+<body>
+  <div id="app" />
+</body>
+
 </html>
