--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+  <head>
+    <title>alan Vue Webpack App</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
+    <meta charset="utf-8" />
+  </head>
 
-<head>
-  <title>alan Vue Webpack App</title>
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-  <meta charset="utf-8" />
-</head>
-
-<body>
-  <div id="app" />
-</body>
-
+  <body>
+    <div id="app" />
+  </body>
 </html>
